brat/test/golden/error/vecpat.brat.golden
Error in test/golden/error/vecpat.brat@FC {start = Pos {line = 3, col = 6}, end = Pos {line = 3, col = 9}}:
fst3(nil) = none
     ^^^

  Unification error: Couldn't force 3 to be 0

